--- a/AcademiaComputacion/My Project/Resources.resx
+++ b/AcademiaComputacion/My Project/Resources.resx
@@ -130,11 +130,11 @@
   <data name="user146" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\user146.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="user197" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\user197.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="businessman50" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\businessman50.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="write12" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\write12.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="professional6" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\professional6.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -142,11 +142,11 @@
   <data name="delete16 (1)" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\delete16 (1).png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="keyboard53" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\keyboard53.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="clock118" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\clock118.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="locked10" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\locked10.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="televisions1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\televisions1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -181,13 +181,16 @@
   <data name="class" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\class.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="keyboard53" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\keyboard53.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="locked10" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\locked10.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="Web-myspace-alt-Metro-icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Web-myspace-alt-Metro-icon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="user197" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\user197.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="write12" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\write12.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="password9" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\password9.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
