--- a/AcademiaComputacion/frmMensualidad.resx
+++ b/AcademiaComputacion/frmMensualidad.resx
@@ -117,57 +117,19 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="wizarInscripcion.PageHeaderIcon" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAAGIAAABDCAYAAABnVdCdAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
-        wwAADsMBx2+oZAAACLFJREFUeF7tnC2TJEUQhs9hUWgUGoWd6SMgEAjUWU7hCFBA7C6xpwjcmYu1+xOQ
-        CASK2J05sZIIzP0EJAIB+WRl9tX2dE9XV1XPx+68ER0zVV1dH/nmV1VPzJMaOFs//fb7m+bvi3Xzn36u
-        Fs/t1glz4PJm8f7568XSii0g4IfVxx/w/ez104+kfKc3DGerxYfnq+YFF31Y9QlTcXm3ePds3fxyvm7e
-        XKya3y9Wy5d2SwER9lXRU767WC8vuUIfJ4vJgpKwWv7E96//+uwdEeiVavi6uTYhX2lDA2XI0HsQF93H
-        oqiz4l6hliprcLf6ds4HqigILnZJl3988h7azYRZjFVvQBfacWU8w+KtuFcg9B/XzVdYvFUF19pZ78Gg
-        pvAgEGuy4iwgDpFAMM7F7eILq94AFmBf70EtfcAqIM3j3ba+qwBt8KDq8aHWoGZNVyxWgz+LFoEwRqyZ
-        OeB51WaNQ8uXwWr7tdvGfmPFe9imLFgRbpo2HjdnsR4VjEwev6ms28B2uxrOb5ff6SLkU8syBgvTmxlQ
-        EnrmKmt5Rr0VW2Ax3aTDgWCRQVcxgjw68ZD+pW3VuBIP5HFgWwyoDYjJTW+Z+5DCsCa1arUSkguC8vLK
-        U+4+0BfKyMWzSpw8g1ysSQviCu2sWI4SQZSCoMlicsffpuEA10qbqYqllibP0vcQcfTZZ3XZULfUMb1d
-        gYWUWN82nz83IAmSrVgHSkaGv1NBiG/VQD8x6LoQpz7XRSmZuZhl3KlE4FKYCIIMQSsEevv+zJqNAp88
-        lKmkAEEomXtwrdUtAo1UP52gmee3zaeWvl33aYNnHnpfgplVD4Ig6AQGUjf9PUTRRu9H6TSKgzKgFFa1
-        UxA7PCFw2aEQqowkBvI5ajHtA+GhpFRV2j5ToSXsLRBSMhmyCHVtNie+2602fkGYK0GY9/Jlav9zA9kF
-        GerxT5uaeyKylQwWoTm9LDrFz2la2xHSGJwMKyZBhN5uqjx11BsRdM5yj/Mvq9o7kCFz76a57sKtuAmY
-        m+JXc305GjzFdcREoE3bcv5jAco4GH8hYsoiEUpOdhM0ZTzXxsXohKUtz6D1WKDdPmrEyrUBTFv9vZj+
-        GCGlQkmxvq7W0J757SsQ1wQyHs2u1A/3ZCoxtjKagJTY0tcGy9BgdwABOReQgJJZcRgp2r4vIkBOwD8U
-        TJp7ChEpbbYhxTVJ/5oaM/G47ZQ9zqEhacPHYlk0AkYIVt0LF4YVJ8HGSToL0v2EpNRkWlalm7mUPU4q
-        UCpdtyQFcvlrUv0VStijLJ7XIp3YO6pEDOobjxQE0qafRfHcpHEi63MF6DuCngrP54Pibb7qZSw2qsyX
-        MSG/xrijcmNCfT55CATMUXY7SE1dHXrsfNv8Js/cBEJk91xoDX4MwXq7wh8Ca8QSmXtp1mZpub7Nw00F
-        C29etHJMyZa68K18Chme8aQsRAVlLuKbdfMP81LByRxLds++Nxn10wNgDSrEQmWQtdjbvPAal/5a94sw
-        1QRloCCEtPcRdMJzQ+bm2pRKAuYf+huPVVNAv6NuIQGsB+Wb4l5TQJ+thTKIZyhTBOGaptrCp5kbLCu5
-        Qlaqf1UNWTc/85xVVQGKxZysWARkxPxq7meCZfTMLw6SqWCCaByd6iU+PsVtxTA39Grq2NuAQqFxVqwC
-        1onSWbEYg0RMDay1EIJp86sE6T+tqhiQOiURSQUeoJZV9BLhprevcx3Rts+/XDf/oslWlY05FaqWVeje
-        Stz3BhE5bqkEcWwCoh2kl6/iGJObLQ2afAUw75JYFr3dlEwsSmEdPoBbRPuAfGqDivCsSyejWU34zZHd
-        DlmK1OWmnHO5JQdzbbOdCXBLHX27SUMExEL8AddOa1IMiKZv1wRMHYF3NaPEQpnzhqZVRC7Rk9bEAuJB
-        gnbW07BUbSohQsbo/YFxLeyEiD7gorrmlKJxaoqd51J38ycietA1dQIrdcGNbf4c0WOAaj9xJnJtfKfO
-        ioMoyU5SrS4XpURku00eRvh0hI8nyFJPh6rhnaORmDg+aU8mo5YVxYcutK1kEh7Ec/N1noVIK1ZHicVF
-        icp1DpnSQfNCCZGrq23xxPrMj/b6/Ei2oBOUicZpbQ4YJ8XqclCrbxQlyLOiwgSLCef8qv0JMaCLPgJL
-        wDxKCe2DrrFSSj/Lfke1XoSZu/jqRHTe8tVA7TnOQkQpdMtvsacWNCaNuMNUtLGu4jH9QRIBWOjY76um
-        ABdC3KmRQalLirK/Gpg7u8uGZ2C4AC7KfNrtLJDllZCBJUAC87KqLPBuBgvAQlmTnjBUdHPVoedOLFyv
-        8L30zZgfq+AGhlLnPqhCiJWWWgJjhowwvDjz9R2kNQyhVuzQ16Yi0CDY7f8Lgta+VYbymIAi5WSSBwe0
-        CK22YhEgQIMkhMgVCTxcsidivJqnzoyTm00eFDBhXIsVq0GtzeKRX3arGkqOag4OEIGPneLfDwW4JJIO
-        Kx4vNGsRa6jlmnYN0nEsYs6zr50gZDt18/ddg8PLmpvLnQOfTQC14lGj1mHhXuD5txWPGkcfK/Cvfa4J
-        kg5tQ8Sc+jIvP2o5xmSjhQdrJ4Of2PCdhVFfevRQC36UgitFefylFiQcdXyIoWS83XDdYeauXZqRCBk1
-        DwunwhXDLdT2DrpZVHIeAgkxMPs+d9T3unZXCMcXm++hKTPfbv2Dx77MH81/EMcXtSAua9af0AxBXeOx
-        b9ZqYSxHR2NzMyw9JNxiaWNjPypwrM2JqhXvgUCqgVOCvGc1YxrsmQ7PcanbG4hBenAobaz4uOGHgt3z
-        KDIp6j1gegDFnQydXblg0fTY9ysxnf2M/zP0g3jXUAuQYRp8jRD1eESE1LebpS0WYsV7wLL6XuhDIqRi
-        LUqmZEtK2ImETSAs3I66EnVBw0IaCu7bjiIgOPQb+o4t5oRMYBF9P+lEyGi8FU+YG1iOBm/dqQctV9cj
-        ru3RbcIOARpb8Ply7YeAJ0/+B1KMHHvVZA0NAAAAAElFTkSuQmCC
-</value>
-  </data>
-  <metadata name="TelerikMetroTheme1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+  <metadata name="RoundRectShapeForm.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>159, 17</value>
+  </metadata>
+  <metadata name="RoundRectShapeTitle.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
-  <metadata name="alertaError.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>181, 17</value>
+  <metadata name="TelerikMetroTheme1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>332, 17</value>
   </metadata>
-  <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>92</value>
+  <metadata name="Office2007BlackTheme1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>496, 17</value>
+  </metadata>
+  <metadata name="VisualStudio2012LightTheme1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 56</value>
   </metadata>
 </root>
