--- a/AcademiaComputacion/frmPagos.resx
+++ b/AcademiaComputacion/frmPagos.resx
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <root>
   <!-- 
     Microsoft ResX Schema 
@@ -117,23 +117,10 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="PaginaProgramas.Size" type="System.Drawing.Size, System.Drawing">
-    <value>923, 598</value>
-  </data>
-  <data name="RadGroupBox3.Location" type="System.Drawing.Point, System.Drawing">
-    <value>190, 88</value>
-  </data>
-  <data name="RadGroupBox3.Size" type="System.Drawing.Size, System.Drawing">
-    <value>542, 251</value>
-  </data>
-  <data name="RadPageViewPage2.Size" type="System.Drawing.Size, System.Drawing">
-    <value>923, 598</value>
-  </data>
-  <data name="PaginaPrincipal.Size" type="System.Drawing.Size, System.Drawing">
-    <value>1064, 619</value>
-  </data>
-  <data name="$this.ClientSize" type="System.Drawing.Size, System.Drawing">
-    <value>1064, 619</value>
-  </data>
+  <metadata name="TelerikMetroTheme1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
+  <metadata name="VisualStudio2012LightTheme1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>181, 17</value>
+  </metadata>
 </root>
