--- a/AcademiaComputacion/My Project/Resources.resx
+++ b/AcademiaComputacion/My Project/Resources.resx
@@ -130,8 +130,8 @@
   <data name="user146" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\user146.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="user197" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\user197.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="1436576995_about_us" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\1436576995_about_us.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="businessman50" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\businessman50.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -145,8 +145,11 @@
   <data name="keyboard53" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\keyboard53.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="clock118" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\clock118.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="user197" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\user197.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="password9" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\password9.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="televisions1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\televisions1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -178,6 +181,9 @@
   <data name="user2" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\user2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="clock118" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\clock118.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="class" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\class.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -190,7 +196,7 @@
   <data name="write12" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\write12.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="password9" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\password9.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="1436577133_about_us" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\1436577133_about_us.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
